[package]
name = "rte-sys"
version = "18.11.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "FFI bindings to DPDK"
links = "dpdk"
build = "build.rs"

[features]
default = []
gen = ["bindgen"]

[lib]
name = "rte_sys"

[dependencies]
log = "0.4"

[build-dependencies]
log = "0.4"
pretty_env_logger = "0.2"

rte-build = { version = "18.11", path = "../rte-build" }

bindgen = { version = "0.44", optional = true }

