[package]
name = "rte-sys"
version = "19.11.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "FFI bindings to DPDK 19.11"
links = "dpdk"
build = "build.rs"

[features]
default = []
gen = ["bindgen"]

[lib]
name = "rte_sys"

[dependencies]
log = "0.4"
cfg-if = "1.0"

[build-dependencies]
log = "0.4"
pretty_env_logger = "0.4"

rte-build = { version = "19.11", path = "../rte-build" }

bindgen = { version = "0.55", optional = true }
