[package]
name = "rte"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "Rust bindings to DPDK"
build = "build.rs"

[dependencies]
log = "0.3"
env_logger = "0.3"
bitflags = "0.6"
lazy_static = "0.1"
libc = "0.2"
errno = "0.1"
cfile = "0.2"
rand = "0.3"
rte-sys = { version = "0.1", path = "../rte-sys" }

[build-dependencies]
gcc = "0.3"

[dev-dependencies]
num_cpus = "0.2"
getopts = "0.2"
nix = "0.5"

[lib]
name = "rte"

[[bin]]
name = "ethtool"
path = "src/bin/ethtool/main.rs"

[[example]]
name = "helloworld"
path = "examples/helloworld/main.rs"

[[example]]
name = "l2fwd"
path = "examples/l2fwd/l2fwd.rs"

[[example]]
name = "kni"
path = "examples/kni/kni.rs"

[[example]]
name = "bond"
path = "examples/bond/main.rs"

[[example]]
name = "cmdline"
path = "examples/cmdline/main.rs"
