[package]
name = "rte"
version = "20.11.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "Rust bindings to DPDK 19.11"
build = "build.rs"

[features]
default = []
gen = ["rte-sys/gen"]

[dependencies]
log = "0.4"
bitflags = "1.2"
failure = "0.1"
lazy_static = "1.4"
libc = "0.2"
time = "0.2"
cfile = "0.4"
rand = "0.7"
errno = "0.2"
num-traits = "0.2"
num-derive = "0.3"
itertools = "0.9"

rte-sys = { version = "20.11", path = "../rte-sys" }

[build-dependencies]
log = "0.4"
pretty_env_logger = "0.4"

rte-build = { version = "20.11", path = "../rte-build" }

[dev-dependencies]
pretty_env_logger = "0.4"
num_cpus = "1.13"
getopts = "0.2"
nix = "0.19"

[lib]
name = "rte"

[[example]]
name = "helloworld"
path = "examples/helloworld/main.rs"

[[example]]
name = "l2fwd"
path = "examples/l2fwd/main.rs"

[[example]]
name = "kni"
path = "examples/kni/main.rs"

[[example]]
name = "bond"
path = "examples/bond/main.rs"

[[example]]
name = "cmdline"
path = "examples/cmdline/main.rs"

[[example]]
name = "ethtool"
path = "examples/ethtool/main.rs"
